force-app/main/default/objects/Term_Sheet__c/Term_Sheet__c.object-meta.xml
<CustomObject>
    <label>Term Sheet</label>
    <nameField>
        <label>Term sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Term Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>