force-app/main/default/objects/Term_Sheet__c/fields/Brokerage_Interest__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Interest__c</fullName>
    <label>Brokerage Interest %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>