force-app/main/default/objects/Term_Sheet__c/fields/Brokerage_Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Threshold_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Brokerage Threshold Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>