force-app/main/default/objects/Term_Sheet__c/fields/Corpus_Interest__c.field-meta.xml
<CustomField>
    <fullName>Corpus_Interest__c</fullName>
    <label>Corpus Interest %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>