force-app/main/default/objects/Term_Sheet__c/fields/Corpus_Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Corpus_Threshold_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Corpus Threshold Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>