force-app/main/default/objects/Term_Sheet__c/fields/Excess_Carpet_Area_Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Excess_Carpet_Area_Threshold_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Excess Carpet Area Threshold Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>