force-app/main/default/objects/Term_Sheet__c/fields/Is_Draft_Bill_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_Draft_Bill_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Draft Bill Generated</label>
    <type>Checkbox</type>
</CustomField>