force-app/main/default/objects/Term_Sheet__c/fields/Last_Bill_Generated_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Last_Bill_Generated_Datetime__c</fullName>
    <label>Last Bill Generated Datetime</label>
    <type>DateTime</type>
</CustomField>