force-app/main/default/objects/Term_Sheet__c/fields/MISC_Interest__c.field-meta.xml
<CustomField>
    <fullName>MISC_Interest__c</fullName>
    <label>MISC Interest %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>