force-app/main/default/objects/Term_Sheet__c/fields/Rent_Interest__c.field-meta.xml
<CustomField>
    <fullName>Rent_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rent Interest %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>