force-app/main/default/objects/Term_Sheet__c/fields/Society__c.field-meta.xml
<CustomField>
    <fullName>Society__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Society</label>
    <referenceTo>Society__c</referenceTo>
    <relationshipLabel>Term Sheets</relationshipLabel>
    <relationshipName>Term_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>