force-app/main/default/objects/Term_Sheet__c/fields/Transport_Interest__c.field-meta.xml
<CustomField>
    <fullName>Transport_Interest__c</fullName>
    <label>Transport Interest %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>