force-app/main/default/objects/Term_Sheet__c/fields/Transport_Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Transport_Threshold_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Transport Threshold Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>